--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@rails/webpacker": "4.3.0",
     "turbolinks": "^5.2.0",
     "typeface-montserrat": "^1.1.13",
-    "typeface-poppins": "^1.1.13"
+    "typeface-poppins": "^1.1.13",
+    "typeface-quicksand": "^1.1.13"
   },
   "version": "0.1.0",
   "devDependencies": {
