performed simple testing

--- a/test/fixtures/notifications.yml
+++ b/test/fixtures/notifications.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  user_id: 45
+  bid_id: 54
+
+two:
+  user_id: 41
+  bid_id: 57
