--- a/test/fixtures/freelancer_infos.yml
+++ b/test/fixtures/freelancer_infos.yml
@@ -7,6 +7,7 @@ one:
   education: MyText
   hourly_rate: 1
   bio: MyText
+  freelancer_id: 47
 
 two:
   category: MyString
@@ -15,3 +16,4 @@ two:
   education: MyText
   hourly_rate: 1
   bio: MyText
+  freelancer_id: 47
