--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.3-4",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "typeface-comfortaa": "^1.1.13",
     "typeface-montserrat": "^1.1.13",
