--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,5 +12,16 @@
 
 user_001:
   id: 111
+  name: "xyz"
   email: test@sample.com
   encrypted_password: <%= User.new.send(:password_digest,'password')%>
+  role: "client"
+  approved: true
+
+user_002:
+  id: 112
+  name: "xyz"
+  email: test2@sample.com
+  encrypted_password: <%= User.new.send(:password_digest,'password')%>
+  role: "freelancer"
+  approved: true
